setup project and install firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,55 +1,26 @@
 name: fresensi
-version: 1.0.0+1
+version: 1.0.0
 publish_to: none
-description: Fresensi Mobile Application
+description: Presence apps integrate with Geo Location
 environment: 
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies: 
   cupertino_icons: ^1.0.2
-  get: 4.6.5
   firebase_core: 2.10.0
-  flutter: 
-    sdk: flutter
   firebase_auth: ^4.4.2
   cloud_firestore: ^4.5.2
   flutter_svg: ^2.0.5
+  map_launcher: ^2.5.0+1
+  geolocator: ^9.0.2
+  maps_launcher: ^2.2.0
+  intl: ^0.17.0
+  get: 4.6.5
+  flutter: 
+    sdk: flutter
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
   flutter_test: 
     sdk: flutter
 
-flutter:
-  uses-material-design: true
-  assets:
-    - assets/images/
-    - assets/icons/
-    - assets/fonts/
-  fonts:
-    - family: poppins
-      fonts:
-        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Poppins/Poppins-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Poppins/Poppins-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Poppins/Poppins-ExtraBold.ttf
-          weight: 800
-    - family: inter
-      fonts:
-        - asset: assets/fonts/inter/Inter-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/inter/Inter-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/inter/Inter-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/inter/Inter-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/inter/Inter-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/inter/Inter-Black.ttf
-          weight: 900
