--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   flutter: 
     sdk: flutter
   email_validator: ^2.1.17
+  image_picker: ^0.8.7+4
+  path_provider: ^2.0.14
+  firebase_storage: ^11.1.1
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
