--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^0.8.7+4
   path_provider: ^2.0.14
   firebase_storage: ^11.1.1
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
