--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: ^2.0.14
   firebase_storage: ^11.1.1
   convex_bottom_bar: ^3.2.0
+  syncfusion_flutter_datepicker: ^21.2.3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
