--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_storage: ^11.1.1
   convex_bottom_bar: ^3.2.0
   syncfusion_flutter_datepicker: ^21.2.3
+  geocoding: ^2.1.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
